--- a/exacs.css
+++ b/exacs.css
@@ -70,7 +70,10 @@ nav ul{
     font-style: italic;
 }
 
+.actual{
+    background-color: #128792;
 
+}
 
 /* CONTINGUT    -  SECTION*/
 article{
@@ -82,9 +85,10 @@ article{
 	background-color: #2dc5d3;
 }
 
-/*En cas de que es vulgui visualitzar els articles individualment i no un rere l'altre per el motiu que s'ha comentat al html, 
-afegir els articles que es volen amagar a la classe amagat */
 .amagat{
+    display:none;
+}
+.bot-amagat{
     display:none;
 }
 
@@ -168,6 +172,11 @@ afegir els articles que es volen amagar a la classe amagat */
     border: none;
     border-radius: 2rem;
     transition-duration: 0.4s;
+    cursor:pointer;
+
+    float: left;
+    width: 33.33%;
+    padding: 20px;
 }
 
 .btn:hover {
@@ -175,6 +184,35 @@ afegir els articles que es volen amagar a la classe amagat */
     box-shadow: 0px 2px 20px 10px #97B1BF;
     color: #000;
 }
+
+.box{
+    float: left;
+    width: 20%;
+    margin-right: 935px;
+    background: #085158;
+    color: #fff;
+    padding: 10px 10px 10px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 2rem;
+    transition-duration: 0.4s;
+}
+#compilat{
+    background-color:#ccc;
+}
+#compilat2{
+    background-color:#ccc;
+}
+#compilat3{
+    background-color:#ccc;
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
 
 /*Taula*/
 table {
